data/derived/comb/progs/unify/prog7560.ml.out
Characters 285-311:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (int * int list) list
       but an expression was expected of type 'a * 'b
